--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ reqwest = "0.11.13"
 serde_json = "1.0.87"
 thiserror = "1.0.37"
 url = "2.2"
+walkdir = "2.5.0"
 zerocopy = "0.6"
 
 [dependencies.tokio]
